--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,19 +1,8 @@
-.Button {
-  background-color: rgb(236, 236, 236);
-  cursor: pointer;
+.button {
   border: none;
-  border-radius: 5px;
-  padding: 10px 20px;
-  font-size: 18px;
-  white-space: nowrap;
-}
-
-.Button_POSITIVE {
-  background-color: rgb(100, 201, 100);
-  color: white;
-}
-
-.Button_NEGATIVE {
-  background-color: rgb(253, 86, 95);
-  color: white;
+  padding: 0.5rem 1.2rem;
+  border-radius: 0.3rem;
+  background-color: #eeeeee;
+  margin-left: 0.5rem;
+  font-size: 1.4rem;
 }
