--- a/src/components/loss/SearchBar.css
+++ b/src/components/loss/SearchBar.css
@@ -1,11 +1,20 @@
 .search-bar {
-  padding: 10px;
+  padding: 1rem;
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 5px;
+  gap: 1rem;
 }
 
 .search-bar select {
-  width: 150px;
+  width: 15rem;
+}
+
+.search-bar .select-wrapper {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.search-bar input[type="radio"] {
+  font-size: 1.4rem;
 }
