--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
+@import url(https://fonts.googleapis.com/css?family=Lato:300);
+
 html,
 body {
   margin: 0;
   width: 100%;
+  height: 100%;
   background-color: rgb(246, 246, 246);
   display: flex;
   font-size: 10px;
@@ -12,10 +15,8 @@ body {
   max-width: 60rem;
   width: 100%;
   margin: 0 auto;
-  min-height: 100vh;
   height: 100%;
   box-shadow: rgba(100, 100, 100, 0.2) 0 0 2.9rem 0;
-  padding: 2rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -41,4 +42,136 @@ body {
 
 #root label {
   font-size: 1.5rem;
+}
+
+/* loading */
+#root .loading {
+  display: none;
+}
+#root .loading.active {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: #000000;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 9999;
+  opacity: 0.7;
+
+  text-align: center;
+  overflow: hidden;
+}
+
+#root .loading .loader-text {
+  color: white;
+  font-size: 2rem;
+  padding-left: 0.5rem;
+}
+
+#root .loading .box:nth-child(2n -1) {
+  background-color: rgba(0, 0, 0, 0.05);
+}
+
+#root .loading .box {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+
+  transition: all 0.2s ease;
+}
+
+#root .loading .box .loader::before {
+  content: "";
+  position: absolute;
+  top: 0px;
+  height: 1.2rem;
+  width: 1.2rem;
+  border-radius: 1.2rem;
+  -webkit-animation: loader9g 3s ease-in-out infinite;
+  animation: loader9g 3s ease-in-out infinite;
+}
+
+#root .loading .box .loader {
+  position: relative;
+  width: 12px;
+  height: 12px;
+  top: 46%;
+  left: 46%;
+  border-radius: 12px;
+  background-color: #fff;
+}
+
+#root .loading .box .loader::after {
+  content: "";
+  position: absolute;
+  top: 0px;
+  height: 12px;
+  width: 12px;
+  border-radius: 12px;
+  -webkit-animation: loader9d 3s ease-in-out infinite;
+  animation: loader9d 3s ease-in-out infinite;
+}
+
+@-webkit-keyframes loader9g {
+  0% {
+    left: -25px;
+    background-color: rgba(255, 255, 255, 0.8);
+  }
+  50% {
+    left: 0px;
+    background-color: rgba(255, 255, 255, 0.1);
+  }
+  100% {
+    left: -25px;
+    background-color: rgba(255, 255, 255, 0.8);
+  }
+}
+@keyframes loader9g {
+  0% {
+    left: -25px;
+    background-color: rgba(255, 255, 255, 0.8);
+  }
+  50% {
+    left: 0px;
+    background-color: rgba(255, 255, 255, 0.1);
+  }
+  100% {
+    left: -25px;
+    background-color: rgba(255, 255, 255, 0.8);
+  }
+}
+
+@-webkit-keyframes loader9d {
+  0% {
+    left: 25px;
+    background-color: rgba(255, 255, 255, 0.8);
+  }
+  50% {
+    left: 0px;
+    background-color: rgba(255, 255, 255, 0.1);
+  }
+  100% {
+    left: 25px;
+    background-color: rgba(255, 255, 255, 0.8);
+  }
+}
+@keyframes loader9d {
+  0% {
+    left: 25px;
+    background-color: rgba(255, 255, 255, 0.8);
+  }
+  50% {
+    left: 0px;
+    background-color: rgba(255, 255, 255, 0.1);
+  }
+  100% {
+    left: 25px;
+    background-color: rgba(255, 255, 255, 0.8);
+  }
 }
