--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,10 @@ body {
   gap: 1rem;
 }
 
+#root .wrapper {
+  padding: 0 1rem;
+}
+
 #root select {
   padding: 0.5rem 1rem;
   border: 0.1rem solid #dbdbdb;
