전체 기본 폰트 설정

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@ body {
   background-color: rgb(246, 246, 246);
   display: flex;
   font-size: 10px;
+  font-family: "NanumSquareRound";
 }
 
 #root {
