Haeder padding 조절

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,6 +1,6 @@
 .header {
   font-weight: 600;
-  padding: 1rem;
+  padding: 3rem 1rem 1rem 1rem;
   font-size: 2.2rem;
   text-align: center;
   border-bottom: 0.1rem solid #efefef;
