Select 상단에 padding 조절

--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@ body {
 }
 
 #root select {
-  padding: 0.5rem 1rem;
+  padding: 0.6rem 1rem 0.5rem 1rem;
   border: 0.1rem solid #dbdbdb;
   border-radius: 0.5rem;
   font-size: 1.4rem;
