--- a/src/assets/Swal.css
+++ b/src/assets/Swal.css
@@ -1,4 +1,9 @@
 .swal2-container .swal2-popup .swal2-html-container {
   font-size: 1.5rem;
   font-family: "NanumSquareRound";
+  font-weight: 500;
+}
+
+.swal2-container .swal2-popup .swal2-actions button {
+  font-size: 1.4rem;
 }
