--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ html,
 body {
   margin: 0;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   background-color: rgb(246, 246, 246);
   display: flex;
   font-size: 10px;
@@ -13,7 +13,6 @@ body {
 
 #root {
   background-color: white;
-  max-width: 60rem;
   width: 100%;
   margin: 0 auto;
   height: 100%;
