1. 페이지 로딩 시 바로 불러오기 추가 2. 이미지 없는 경우 대체 이미지로 변경

--- a/src/components/loss/list/LossList.css
+++ b/src/components/loss/list/LossList.css
@@ -39,10 +39,16 @@
   grid-column: span 3;
 }
 
+.loss-list .img-wrap {
+  background-color: #f8f8f8;
+  border-radius: 1rem;
+  text-align: center;
+  flex: 1;
+  display: flex;
+}
 .loss-list .loss-pet img {
   width: 100%;
   max-width: 30rem;
-  border-radius: 1rem;
   margin: auto;
 }
 
