--- a/src/components/loss/list/LossList.css
+++ b/src/components/loss/list/LossList.css
@@ -41,10 +41,11 @@
 
 .loss-list .img-wrap {
   background-color: #f8f8f8;
-  border-radius: 1rem;
+  border-radius: 0.5rem;
   text-align: center;
   flex: 1;
   display: flex;
+  overflow: hidden;
 }
 .loss-list .loss-pet img {
   width: 100%;
