--- a/src/components/loss/pagination/Pagination.css
+++ b/src/components/loss/pagination/Pagination.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
-  padding: 1rem 0 0 0;
+  justify-content: end;
+  padding: 1rem 2rem 0 0;
 }
 
 .nav-bar .page {
