--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,17 @@ body {
   padding: 0 1rem 2rem 1rem;
 }
 
+/* header */
+#root .header {
+  padding: 3rem 1rem 1rem 1rem;
+  text-align: center;
+  border-bottom: 0.1rem solid #efefef;
+}
+#root .header label {
+  font-weight: 600;
+  font-size: 2.2rem;
+}
+
 /* select, input */
 #root select,
 #root input {
@@ -196,4 +207,35 @@ body {
     left: 25px;
     background-color: rgba(255, 255, 255, 0.8);
   }
+}
+
+/* 필터바 */
+.filter-bar > label {
+  background-color: #efefef;
+  border-radius: 1.5rem;
+  padding: 0.5rem 1.5rem;
+  color: #414141;
+  width: 6rem;
+  text-align: center;
+}
+
+.filter-bar > label:hover {
+  background-color: #ffd5e1;
+}
+
+.filter-bar > label.active {
+  background-color: #ff9cb8;
+  color: #ffffff;
+}
+
+.filter-bar > label.active::before {
+  font-family: "Font Awesome 6 Free";
+  font-weight: 500;
+  content: "\f058";
+  font-size: 1.2rem;
+  margin-right: 0.5rem;
+}
+
+.filter-bar input {
+  display: none;
 }
