분실동물 조회 -> 지도 버튼 및 페이지 추가

--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -17,6 +17,7 @@
   background-color: #e2e2e2;
 }
 
+/* search */
 .button.search {
   border-radius: 1.5rem;
   background-color: #848dff;
@@ -28,6 +29,14 @@
 .button.search::after {
   font-family: "Font Awesome 6 Free";
   font-weight: 900;
-  content: "\f002";
   font-size: 1.2rem;
+  content: "\f002";
+}
+
+/* map */
+.button.map::after {
+  font-family: "Font Awesome 6 Free";
+  font-weight: 600;
+  font-size: 1.2rem;
+  content: "\f279";
 }
