--- a/src/pages/lost/Map.css
+++ b/src/pages/lost/Map.css
@@ -11,10 +11,20 @@
 
 .kakao-map {
   width: 100%;
-  height: calc(100vh - 10rem);
+  height: calc(100vh - 30rem);
 }
 
 .list-container {
   width: 60rem;
   height: 100%;
+}
+
+.lost-map-wrap {
+  padding: 1rem 2rem;
+}
+
+.lost-map-wrap .header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
